nav bar tiltle changed for responsive display

--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
       <!-- Navbar Brand-->
 
       <a class="navbar-brand ps-3" href="index.html"
-        ><img
-          class="title-logo pocra-logo"
-          src="./assets/logo/pocra-logo.png"
-        />PoCRA</a
-      >
+        ><img class="title-logo pocra-logo" src="./assets/logo/pocra-logo.png"
+      /></a>
       <!-- Sidebar Toggle-->
       <button
         class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
@@ -48,23 +45,8 @@
         <i class="fas fa-bars"></i>
       </button>
       <!-- Navbar Title-->
-      <div class="pos-f-t">
-        <nav class="navbar navbar-dark bg-dark">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </nav>
-      </div>
 
-      <div class="row title-bar" style="width: 100%">
+      <div class="row title-bar">
         <div
           class="col-lg-10 col-md-10 col-sm-9 col-xs-8 title-grid"
           id="title-grid"
@@ -83,6 +65,8 @@
                 class="title-logo emblum-logo"
                 src="./assets/logo/emblum-logo.png"
               />
+            </li>
+            <li>
               <img
                 class="title-logo agri-logo"
                 src="./assets/logo/agri-logo.png"
@@ -111,8 +95,6 @@
           </ul>
         </div>
       </div>
-
-      <div class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4 title-bar"></div>
 
       <!-- Navbar-->
     </nav>
