--- a/index.html
+++ b/index.html
@@ -136,32 +136,30 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="dbt-farmer.html">
+                    <a
+                      class="nav-link"
+                      href="./html/dbt-services/dbt-farmer.html"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
                       Farmer Category
                     </a>
-                    <a class="nav-link" href="dbt-farmer.html">
+                    <a class="nav-link" href="./html/dbt-services/dbt-nrm.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-people-group"></i>
                       </div>
                       NRM Category
                     </a>
-                    <a class="nav-link" href="dbt-farmer.html">
+                    <a
+                      class="nav-link"
+                      href="./html/dbt-services/dbt-fpc-fpo.html"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-industry"></i>
                       </div>
                       FPC/FPO Category</a
                     >
-                    <!-- 
-                    <a class="nav-link" href="layout-static.html"
-                    >Static Navigation</a
-                  >
-                  <a class="nav-link" href="layout-sidenav-light.html"
-                    >Light Sidenav</a
-                  >
-                   -->
                   </nav>
                 </div>
               </div>
@@ -214,9 +212,9 @@
                     data-bs-parent="#sidenavAccordionPages"
                   >
                     <nav class="sb-sidenav-menu-nested nav">
-                      <a class="nav-link" href="login.html">Login</a>
-                      <a class="nav-link" href="register.html">Register</a>
-                      <a class="nav-link" href="password.html"
+                      <a class="nav-link" href="./html/user-services/login.html">Login</a>
+                      <a class="nav-link" href="./html/user-services/register.html">Register</a>
+                      <a class="nav-link" href="./html/user-services/password.html"
                         >Forgot Password</a
                       >
                     </nav>
@@ -241,9 +239,9 @@
                     data-bs-parent="#sidenavAccordionPages"
                   >
                     <nav class="sb-sidenav-menu-nested nav">
-                      <a class="nav-link" href="401.html">401 Page</a>
-                      <a class="nav-link" href="404.html">404 Page</a>
-                      <a class="nav-link" href="500.html">500 Page</a>
+                      <a class="nav-link" href="./html/error-services/401.html">401 Page</a>
+                      <a class="nav-link" href="./html/error-services/404.html">404 Page</a>
+                      <a class="nav-link" href="./html/error-services/500.html">500 Page</a>
                     </nav>
                   </div>
                 </nav>
@@ -275,13 +273,19 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="weather-forecast.html">
+                    <a
+                      class="nav-link"
+                      href="./html/weather-services/weather-forecast.html"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-cloud-sun-rain"></i>
                       </div>
                       Weather Forecast</a
                     >
-                    <a class="nav-link" href="weather-realtime.html">
+                    <a
+                      class="nav-link"
+                      href="./html/weather-services/weather-realtime.html"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-cloud-showers-water"></i>
                       </div>
@@ -326,7 +330,10 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="soil-soil-health-card.html">
+                    <a
+                      class="nav-link"
+                      href="./html/soil-services/soil-soil-health-card.html"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-file-invoice"></i>
                       </div>
@@ -362,7 +369,10 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="map-export-map.html">
+                    <a
+                      class="nav-link"
+                      href="./html/map-services/map-export-map.html"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-file-export"></i>
                       </div>
@@ -391,6 +401,7 @@
           </div>
         </nav>
       </div>
+
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
@@ -414,7 +425,7 @@
                   >
                     <a
                       class="small text-white stretched-link"
-                      href="map-pocra-districts.html"
+                      href="./html/dashboard-service/map-pocra-districts.html"
                       >View Details</a
                     >
                     <div class="small text-white">
@@ -434,7 +445,7 @@
                   >
                     <a
                       class="small text-white stretched-link"
-                      href="map-pocra-talukas.html"
+                      href="./html/dashboard-service/map-pocra-talukas.html"
                       >View Details</a
                     >
                     <div class="small text-white">
@@ -454,7 +465,7 @@
                   >
                     <a
                       class="small text-white stretched-link"
-                      href="map-pocra-subdivisions.html"
+                      href="./html/dashboard-service/map-pocra-subdivisions.html"
                       >View Details</a
                     >
                     <div class="small text-white">
@@ -474,7 +485,7 @@
                   >
                     <a
                       class="small text-white stretched-link"
-                      href="map-pocra-villages.html"
+                      href="./html/dashboard-service/map-pocra-villages.html"
                       >View Details</a
                     >
                     <div class="small text-white">
@@ -1038,6 +1049,8 @@
         </footer>
       </div>
     </div>
+    <!-- external JS files -->
+    <!-- bootstrap and other required JS files -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
@@ -1047,18 +1060,24 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- data tables demo js (delete in production enviorenment) -->
     <script src="assets/demo/chart-area-demo.js"></script>
     <script src="assets/demo/chart-bar-demo.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
       crossorigin="anonymous"
     ></script>
+    <!-- data tables demo js (delete in production enviorenment) -->
     <script src="js/datatables-simple-demo.js"></script>
 
     <!-- Open Layer js Files -->
-    <script src="./js/pocra-administrative-map.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
+
     <!-- Open Layer Extention -->
     <script src="./libs/dist/ol-ext.min.js"></script>
+
+    <!-- Internal JS file -->
+    <script src="./js/dashboard-service-js/pocra-administrative-map.js"></script>
   </body>
 </html>
