--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             <!-- PoCRA Count Area -->
             <div class="row">
               <div class="col-xl-3 col-md-6">
-                <div class="card bg-primary text-white mb-4">
+                <div class="card_pocra_count bg-primary text-white mb-4">
                   <div class="card-body center">
                     PoCRA District's
                     <span class="proca-count pocra-district">15</span>
@@ -435,7 +435,7 @@
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
-                <div class="card bg-warning text-white mb-4">
+                <div class="card_pocra_count bg-warning text-white mb-4">
                   <div class="card-body center">
                     PoCRA Taluka's
                     <span class="proca-count pocra-taluka">155</span>
@@ -455,7 +455,7 @@
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
-                <div class="card bg-success text-white mb-4">
+                <div class="card_pocra_count bg-success text-white mb-4">
                   <div class="card-body center">
                     PoCRA Sub-division's
                     <span class="proca-count pocra-subdivision">36</span>
@@ -475,7 +475,7 @@
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
-                <div class="card bg-danger text-white mb-4">
+                <div class="card_pocra_count bg-danger text-white mb-4">
                   <div class="card-body center">
                     PoCRA Village's
                     <span class="proca-count pocra-village">5272</span>
@@ -508,6 +508,82 @@
                 class="administrative-map"
               ></div>
             </div>
+
+            <!-- Ifram section -->
+            <div class="mb-4" id="bannerContainer">
+              <div class="banner container">
+                <style>
+                  .tabs .nav-link {
+                    color: black !important;
+
+                    font-size: 20px;
+                  }
+                  .tabs .nav-link.active {
+                    font-weight: bold;
+                  }
+                </style>
+
+                <ul class="nav nav-tabs tabs">
+                  <li class="nav-item">
+                    <a
+                      class="nav-link active"
+                      data-toggle="tab"
+                      aria-current="page"
+                      href="#1"
+                      >प्रकल्प अर्थसहाय्य</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      data-toggle="tab"
+                      aria-current="page"
+                      href="#2"
+                      >वैयक्तिक घटक</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#3" data-toggle="tab"
+                      >कृषि व्यवसाय घटक</a
+                    >
+                  </li>
+                </ul>
+
+                <div class="tab-content">
+                  <div class="tab-pane active" id="1">
+                    <div class="banner">
+                      <iframe
+                        height="750px"
+                        width="100%"
+                        src="https://app.powerbi.com/view?r=eyJrIjoiOTE4MDZkNGEtZmU3Mi00Zjc1LTljYjItNzcwNjQxODVjNWI1IiwidCI6IjFlZmQ0Yzk2LWVlZjQtNGEyZS1iNDcyLTBlZDQzZDk0MDQ0YiJ9"
+                        title="प्रकल्प अर्थसहाय्य"
+                      ></iframe>
+                    </div>
+                  </div>
+                  <div class="tab-pane" id="2">
+                    <div class="banner">
+                      <iframe
+                        height="750px"
+                        width="100%"
+                        src="https://app.powerbi.com/view?r=eyJrIjoiMzUyOWJkZDctY2RmMy00MTc0LTk0YmUtMjBmMmI3ZDViNWI5IiwidCI6IjFlZmQ0Yzk2LWVlZjQtNGEyZS1iNDcyLTBlZDQzZDk0MDQ0YiJ9"
+                        title="Farmers dashboard"
+                      ></iframe>
+                    </div>
+                  </div>
+                  <div class="tab-pane" id="3">
+                    <div class="banner">
+                      <iframe
+                        height="750px"
+                        width="100%"
+                        src="https://app.powerbi.com/view?r=eyJrIjoiN2U2ODViNjUtYWNhMS00YjExLTk5YzgtYmM1ZjY0ODJiMDNhIiwidCI6IjFlZmQ0Yzk2LWVlZjQtNGEyZS1iNDcyLTBlZDQzZDk0MDQ0YiJ9"
+                        title="FPC"
+                      ></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end Ifram section -->
 
             <!-- Chart Area -->
             <div class="row">
@@ -1050,6 +1126,7 @@
       </div>
     </div>
     <!-- external JS files -->
+
     <!-- bootstrap and other required JS files -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -1060,7 +1137,13 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
       crossorigin="anonymous"
     ></script>
-
+    <!-- JQuery JS file -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- data tables demo js (delete in production enviorenment) -->
     <script src="assets/demo/chart-area-demo.js"></script>
     <script src="assets/demo/chart-bar-demo.js"></script>
@@ -1079,5 +1162,7 @@
 
     <!-- Internal JS file -->
     <script src="./js/dashboard-service-js/pocra-administrative-map.js"></script>
+    <!-- Active js -->
+    <script src="./js/dashboard-service-js/active.js"></script>
   </body>
 </html>
