--- a/html/dbt-services/dbt-farmer.html
+++ b/html/dbt-services/dbt-farmer.html
@@ -1,9 +1,392 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>PoCRA GIS Dashboard</title>
+    <!--  -->
+    <!-- <base href="" /> -->
+    <!--  -->
+    <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
+      rel="stylesheet"
+    />
+    <link href="../../css/styles.css" rel="stylesheet" />
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Open Layer Library -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ol@v7.4.0/ol.css"
+    />
+    <!-- Open Layer Extention -->
+    <link rel="stylesheet" href="../../libs/dist/ol-ext.min.css" />
   </head>
-  <body></body>
+  <body class="sb-nav-fixed">
+    <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
+      <!-- Navbar Brand-->
+      <a class="navbar-brand ps-3" href="../../index.html"
+        ><img class="title-logo pocra-logo" src="../../assets/logo/pocra-logo.png"
+      /></a>
+      <!-- Sidebar Toggle-->
+      <button
+        class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
+        id="sidebarToggle"
+        href="#!"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <!-- Navbar Title-->
+
+      <div class="row title-bar">
+        <div
+          class="col-lg-10 col-md-10 col-sm-9 col-xs-8 title-grid"
+          id="title-grid"
+        >
+          <h2 id="title">
+            नानाजी देशमुख कृषि संजीवनी प्रकल्प
+            <h6 class="text-muted" id="sub-title">
+              कृषी विभाग, महाराष्ट्र शासन
+            </h6>
+          </h2>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 logo-div">
+          <ul class="navbar-nav">
+            <li class="">
+              <img
+                class="title-logo emblum-logo"
+                src="../../assets/logo/emblum-logo.png"
+              />
+            </li>
+            <li>
+              <img
+                class="title-logo agri-logo"
+                src="../../assets/logo/agri-logo.png"
+              />
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                id="navbarDropdown"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                ><i class="fas fa-user fa-fw"></i
+              ></a>
+              <ul
+                class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="navbarDropdown"
+              >
+                <li><a class="dropdown-item" href="#!">Settings</a></li>
+                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#!">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Navbar-->
+    </nav>
+    <div id="layoutSidenav">
+      <div id="layoutSidenav_nav">
+        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+          <div class="sb-sidenav-menu">
+            <div class="nav">
+              <div class="sb-sidenav-menu-heading">Core</div>
+              <a class="nav-link" href="../../index.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-tachometer-alt"></i>
+                </div>
+                Dashboard
+              </a>
+              <!-- DBT Pages -->
+              <div class="dbt-pages">
+                <div class="sb-sidenav-menu-heading">DBT</div>
+                <a
+                  class="nav-link collapsed"
+                  href="#"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseLayouts-DBT"
+                  aria-expanded="false"
+                  aria-controls="collapseLayouts"
+                >
+                  <div class="sb-nav-link-icon">
+                    <i class="fa-solid fa-building-columns"></i>
+                  </div>
+                  DBT Services
+                  <div class="sb-sidenav-collapse-arrow">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                </a>
+                <div
+                  class="collapse"
+                  id="collapseLayouts-DBT"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#sidenavAccordion"
+                >
+                  <nav class="sb-sidenav-menu-nested nav">
+                    <a
+                      class="nav-link"
+                      href="./dbt-farmer.html"
+                    >
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-tractor"></i>
+                      </div>
+                      Farmer Category
+                    </a>
+                    <a class="nav-link" href="./dbt-nrm.html">
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-people-group"></i>
+                      </div>
+                      NRM Category
+                    </a>
+                    <a
+                      class="nav-link"
+                      href="./dbt-fpc-fpo.html"
+                    >
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-industry"></i>
+                      </div>
+                      FPC/FPO Category</a
+                    >
+                  </nav>
+                </div>
+              </div>             
+              <!-- Weather Pages -->
+              <div class="weather-pages">
+                <div class="sb-sidenav-menu-heading">Weather</div>
+                <a
+                  class="nav-link collapsed"
+                  href="#"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseLayouts-weather"
+                  aria-expanded="false"
+                  aria-controls="collapseLayouts"
+                >
+                  <div class="sb-nav-link-icon">
+                    <i class="fa-solid fa-cloud-bolt"></i>
+                  </div>
+                  Weather Services
+                  <div class="sb-sidenav-collapse-arrow">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                </a>
+                <div
+                  class="collapse"
+                  id="collapseLayouts-weather"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#sidenavAccordion"
+                >
+                  <nav class="sb-sidenav-menu-nested nav">
+                    <a
+                      class="nav-link"
+                      href="../weather-services/weather-forecast.html"
+                    >
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-cloud-sun-rain"></i>
+                      </div>
+                      Weather Forecast</a
+                    >
+                    <a
+                      class="nav-link"
+                      href="../weather-services/weather-realtime.html"
+                    >
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-cloud-showers-water"></i>
+                      </div>
+                      Realtime Weather</a
+                    >
+                    <!-- 
+                    <a class="nav-link" href="layout-static.html"
+                    >Static Navigation</a
+                  >
+                  <a class="nav-link" href="layout-sidenav-light.html"
+                    >Light Sidenav</a
+                  >
+                   -->
+                  </nav>
+                </div>
+              </div>
+
+              <!--  -->
+              <!-- Soil Pages -->
+              <div class="soil-pages">
+                <div class="sb-sidenav-menu-heading">Soil</div>
+                <a
+                  class="nav-link collapsed"
+                  href="#"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseLayouts-soil"
+                  aria-expanded="false"
+                  aria-controls="collapseLayouts"
+                >
+                  <div class="sb-nav-link-icon">
+                    <i class="fa-solid fa-flask-vial"></i>
+                  </div>
+                  Soil Services
+                  <div class="sb-sidenav-collapse-arrow">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                </a>
+                <div
+                  class="collapse"
+                  id="collapseLayouts-soil"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#sidenavAccordion"
+                >
+                  <nav class="sb-sidenav-menu-nested nav">
+                    <a
+                      class="nav-link"
+                      href="../soil-services/soil-soil-health-card.html"
+                    >
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-file-invoice"></i>
+                      </div>
+                      Soil Health Card
+                    </a>
+                  </nav>
+                </div>
+              </div>
+
+              <!-- Make My Map Pages -->
+              <div class="make-my-map-pages">
+                <div class="sb-sidenav-menu-heading">Make My Map</div>
+                <a
+                  class="nav-link collapsed"
+                  href="#"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseLayouts-make-map"
+                  aria-expanded="false"
+                  aria-controls="collapseLayouts"
+                >
+                  <div class="sb-nav-link-icon">
+                    <i class="fa-solid fa-map-location-dot"></i>
+                  </div>
+                  Map Services
+                  <div class="sb-sidenav-collapse-arrow">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                </a>
+                <div
+                  class="collapse"
+                  id="collapseLayouts-make-map"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#sidenavAccordion"
+                >
+                  <nav class="sb-sidenav-menu-nested nav">
+                    <a
+                      class="nav-link"
+                      href="../map-services/map-export-map.html"
+                    >
+                      <div class="sb-nav-link-icon">
+                        <i class="fa-solid fa-file-export"></i>
+                      </div>
+                      Export Map
+                    </a>
+                  </nav>
+                </div>
+              </div>
+
+              <div class="sb-sidenav-menu-heading">External Resources</div>
+              <a class="nav-link" href="../../charts.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-chart-area"></i>
+                </div>
+                Charts
+              </a>
+              <a class="nav-link" href="../../tables.html">
+                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                Tables
+              </a>
+            </div>
+          </div>
+          <div class="sb-sidenav-footer">
+            <div class="small">Logged in as:</div>
+            PoCRA Admin
+          </div>
+        </nav>
+      </div>
+
+      <div id="layoutSidenav_content">
+        <main>
+          <div class="container-fluid px-4">
+            <h5 class="mt-4">DBT- Farmer Dashboard</h5>       
+            <!-- Administrative Map -->
+            <div class="card mb-4">
+              <div class="card-header">
+                <i class="fa-regular fa-map"></i>
+                PoCRA Juridiction
+              </div>
+              <div id="map-div" class="map"></div>
+              <div
+                id="pocra-dbt-farmer-map"
+                class="dbt-farmer-map"
+              ></div>
+            </div>
+          </div>
+        </main>
+        <!-- Footer -->
+        <footer class="py-4 bg-light mt-auto">
+          <div class="container-fluid px-4">
+            <div
+              class="d-flex align-items-center justify-content-between small"
+            >
+              <div class="text-muted">
+                Copyright &copy;
+                <a href="https://mahapocra.gov.in/">mahapocra.gov.in</a> 2023
+              </div>
+              <div>
+                <a>Last Updated on: <span id="updatedOn">28/07/2023</span></a>
+              </div>
+              <div>
+                <a href="#">Privacy Policy</a>
+                &middot;
+                <a href="#">Terms &amp; Conditions</a>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
+    <!-- external JS files -->
+
+    <!-- bootstrap and other required JS files -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../../js/scripts.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- JQuery JS file -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- Open Layer js Files -->
+    <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
+
+    <!-- Open Layer Extention -->
+    <script src="../../libs/dist/ol-ext.min.js"></script>   
+    <!-- Internal JS file -->
+    <script src="../../js/dbt-service-js/pocra-dbt-farmer-map.js"></script>
+    <!-- Active js -->    
+  </body>
 </html>
