--- a/html/dbt-services/dbt-fpc-fpo.html
+++ b/html/dbt-services/dbt-fpc-fpo.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css">
   </head>
-  <body></body>
+
+  <body>
+  <div class="">
+    <strong>Select Language:</strong>
+      <select id="multiple-checkboxes" multiple="multiple">
+          <option value="php">PHP</option>
+          <option value="javascript">JavaScript</option>
+          <option value="java">Java</option>
+          <option value="sql">SQL</option>
+          <option value="jquery">Jquery</option>
+          <option value=".net">.Net</option>
+      </select>
+  </div>
+  </body>
 </html>
