change in sub-title text appearance

--- a/html/dbt-services/dbt-farmer.html
+++ b/html/dbt-services/dbt-farmer.html
@@ -36,7 +36,9 @@
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
       <!-- Navbar Brand-->
       <a class="navbar-brand ps-3" href="../../index.html"
-        ><img class="title-logo pocra-logo" src="../../assets/logo/pocra-logo.png"
+        ><img
+          class="title-logo pocra-logo"
+          src="../../assets/logo/pocra-logo.png"
       /></a>
       <!-- Sidebar Toggle-->
       <button
@@ -55,9 +57,7 @@
         >
           <h2 id="title">
             नानाजी देशमुख कृषि संजीवनी प्रकल्प
-            <h6 class="text-muted" id="sub-title">
-              कृषी विभाग, महाराष्ट्र शासन
-            </h6>
+            <h6 class="" id="sub-title">कृषी विभाग, महाराष्ट्र शासन</h6>
           </h2>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 logo-div">
@@ -138,10 +138,7 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a
-                      class="nav-link"
-                      href="./dbt-farmer.html"
-                    >
+                    <a class="nav-link" href="./dbt-farmer.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
@@ -153,10 +150,7 @@
                       </div>
                       NRM Category
                     </a>
-                    <a
-                      class="nav-link"
-                      href="./dbt-fpc-fpo.html"
-                    >
+                    <a class="nav-link" href="./dbt-fpc-fpo.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-industry"></i>
                       </div>
@@ -164,7 +158,7 @@
                     >
                   </nav>
                 </div>
-              </div>             
+              </div>
               <!-- Weather Pages -->
               <div class="weather-pages">
                 <div class="sb-sidenav-menu-heading">Weather</div>
@@ -323,7 +317,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h5 class="mt-4">DBT- Farmer Dashboard</h5>       
+            <h5 class="mt-4">DBT- Farmer Dashboard</h5>
             <!-- Administrative Map -->
             <div class="card mb-4">
               <div class="card-header">
@@ -331,10 +325,7 @@
                 PoCRA Juridiction
               </div>
               <div id="map-div" class="map"></div>
-              <div
-                id="pocra-dbt-farmer-map"
-                class="dbt-farmer-map"
-              ></div>
+              <div id="pocra-dbt-farmer-map" class="dbt-farmer-map"></div>
             </div>
           </div>
         </main>
@@ -384,9 +375,9 @@
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
 
     <!-- Open Layer Extention -->
-    <script src="../../libs/dist/ol-ext.min.js"></script>   
+    <script src="../../libs/dist/ol-ext.min.js"></script>
     <!-- Internal JS file -->
     <script src="../../js/dbt-service-js/pocra-dbt-farmer-map.js"></script>
-    <!-- Active js -->    
+    <!-- Active js -->
   </body>
 </html>
