--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -13,7 +13,7 @@
     <!--  -->
     <!-- <base href="" /> -->
     <!--  -->
-    <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />    
+    <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />
     <link href="../../css/styles.css" rel="stylesheet" />
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
@@ -29,14 +29,18 @@
     <link rel="stylesheet" href="../../libs/dist/ol-ext.min.css" />
     <!--  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css">
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css"
+    />
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
       <!-- Navbar Brand-->
       <a class="navbar-brand ps-3" href="../../index.html"
-        ><img class="title-logo pocra-logo" src="../../assets/logo/pocra-logo.png"
+        ><img
+          class="title-logo pocra-logo"
+          src="../../assets/logo/pocra-logo.png"
       /></a>
       <!-- Sidebar Toggle-->
       <button
@@ -55,9 +59,7 @@
         >
           <h2 id="title">
             नानाजी देशमुख कृषि संजीवनी प्रकल्प
-            <h6 class="text-muted" id="sub-title">
-              कृषी विभाग, महाराष्ट्र शासन
-            </h6>
+            <h6 class="" id="sub-title">कृषी विभाग, महाराष्ट्र शासन</h6>
           </h2>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 logo-div">
@@ -138,10 +140,7 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a
-                      class="nav-link"
-                      href="./dbt-farmer.html"
-                    >
+                    <a class="nav-link" href="./dbt-farmer.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
@@ -153,10 +152,7 @@
                       </div>
                       NRM Category
                     </a>
-                    <a
-                      class="nav-link"
-                      href="./dbt-fpc-fpo.html"
-                    >
+                    <a class="nav-link" href="./dbt-fpc-fpo.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-industry"></i>
                       </div>
@@ -164,7 +160,7 @@
                     >
                   </nav>
                 </div>
-              </div>             
+              </div>
               <!-- Weather Pages -->
               <div class="weather-pages">
                 <div class="sb-sidenav-menu-heading">Weather</div>
@@ -320,7 +316,12 @@
             <div class="row mb-4">
               <p class="">Selection Menu</p>
               <div class="col-xl-3 col-md-6">
-                <select class="form-select" aria-label=" Default select " id="activity" onchange="getNrmActivity(this.value);">
+                <select
+                  class="form-select"
+                  aria-label=" Default select "
+                  id="activity"
+                  onchange="getNrmActivity(this.value);"
+                >
                   <option selected value="-1">--Select Activity--</option>
                   <option value="1">One</option>
                   <option value="2">Two</option>
@@ -328,16 +329,28 @@
                 </select>
               </div>
               <div class="col-xl-3 col-md-6">
-                <select class="form-select" aria-label=" Default select " id="district" onchange = "getDistrict(this.value);">                  
-                </select>
+                <select
+                  class="form-select"
+                  aria-label=" Default select "
+                  id="district"
+                  onchange="getDistrict(this.value);"
+                ></select>
               </div>
               <div class="col-xl-3 col-md-6">
-                <select class="form-select" aria-label=" Default select " id="taluka" onchange="getTaluka(this.value);">
-                </select>
+                <select
+                  class="form-select"
+                  aria-label=" Default select "
+                  id="taluka"
+                  onchange="getTaluka(this.value);"
+                ></select>
               </div>
               <div class="col-xl-3 col-md-6">
-                <select class="form-select" aria-label=" Default select " id="village" onchange="getVillage(this.value)">
-                </select>                
+                <select
+                  class="form-select"
+                  aria-label=" Default select "
+                  id="village"
+                  onchange="getVillage(this.value)"
+                ></select>
               </div>
             </div>
             <!-- Map Div -->
@@ -347,10 +360,7 @@
                 PoCRA Juridiction
               </div>
               <div id="map-div" class="map"></div>
-              <div
-                id="pocra-dbt-nrm-map"
-                class="dbt-nrm-map"
-              ></div>
+              <div id="pocra-dbt-nrm-map" class="dbt-nrm-map"></div>
             </div>
           </div>
         </main>
@@ -377,12 +387,12 @@
         </footer>
       </div>
     </div>
-    <!-- external JS files -->    
+    <!-- external JS files -->
     <!-- bootstrap and other required JS files -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
-    ></script>    
+    ></script>
     <!-- JQuery JS file -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
@@ -393,10 +403,10 @@
     <!-- Open Layer js Files -->
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
     <!-- Open Layer Extention -->
-    <script src="../../libs/dist/ol-ext.min.js"></script>   
+    <script src="../../libs/dist/ol-ext.min.js"></script>
     <!-- Internal JS file -->
     <script src="../../js/dbt-service-js/pocra-dbt-nrm-map.js"></script>
-    <!-- Active js -->    
+    <!-- Active js -->
     <script src="../../js/scripts.js"></script>
     <script src="../../js/custom.js"></script>
   </body>
