--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         >
           <h2 id="title">
             नानाजी देशमुख कृषि संजीवनी प्रकल्प
-            <h6 class="text-muted" id="sub-title">
-              कृषी विभाग, महाराष्ट्र शासन
-            </h6>
+            <h6 class="" id="sub-title">कृषी विभाग, महाराष्ट्र शासन</h6>
           </h2>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 logo-div">
