change in layout

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -57,9 +57,11 @@
           class="col-lg-10 col-md-10 col-sm-9 col-xs-8 title-grid"
           id="title-grid"
         >
-          <h2 id="title">
+          <h2 class="fw-bolder" id="title">
             नानाजी देशमुख कृषि संजीवनी प्रकल्प
-            <h6 class="" id="sub-title">कृषी विभाग, महाराष्ट्र शासन</h6>
+            <h6 class="fw-bolder" id="sub-title">
+              कृषी विभाग, महाराष्ट्र शासन
+            </h6>
           </h2>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 logo-div">
@@ -375,7 +377,10 @@
                 <a href="https://mahapocra.gov.in/">mahapocra.gov.in</a> 2023
               </div>
               <div>
-                <a>Last Updated on: <span id="updatedOn">28/07/2023</span></a>
+                <a
+                  >Last Updated on:
+                  <span class="fw-bolder" id="updatedOn">28/07/2023</span></a
+                >
               </div>
               <div>
                 <a href="#">Privacy Policy</a>
