--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
           class="col-lg-10 col-md-10 col-sm-9 col-xs-8 title-grid"
           id="title-grid"
         >
-          <h2 id="title">
+          <h2 class="fw-bolder" id="title">
             नानाजी देशमुख कृषि संजीवनी प्रकल्प
-            <h6 class="" id="sub-title">कृषी विभाग, महाराष्ट्र शासन</h6>
+            <h6 class="fw-bolder" id="sub-title">
+              कृषी विभाग, महाराष्ट्र शासन
+            </h6>
           </h2>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 logo-div">
@@ -413,13 +415,13 @@
             <!-- PoCRA Count Area -->
             <div class="row">
               <div class="col-xl-3 col-md-6">
-                <div class="card_pocra_count bg-primary text-white mb-4">
+                <div class="card_pocra_count bg-light text-black mb-4">
                   <div class="card-body center">
-                    PoCRA District's
+                    <span class="fw-bolder">Project District's</span>
                     <span class="proca-count pocra-district">15</span>
                   </div>
                   <div
-                    class="card-footer d-flex align-items-center justify-content-between"
+                    class="card-footer d-flex align-items-center justify-content-between card-footer-pocra-count-bg-blue"
                   >
                     <a
                       class="small text-white stretched-link"
@@ -433,13 +435,13 @@
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
-                <div class="card_pocra_count bg-warning text-white mb-4">
+                <div class="card_pocra_count bg-light text-black mb-4">
                   <div class="card-body center">
-                    PoCRA Taluka's
+                    <span class="fw-bolder">Project Taluka's</span>
                     <span class="proca-count pocra-taluka">155</span>
                   </div>
                   <div
-                    class="card-footer d-flex align-items-center justify-content-between"
+                    class="card-footer d-flex align-items-center justify-content-between card-footer-pocra-count-bg-blue"
                   >
                     <a
                       class="small text-white stretched-link"
@@ -453,13 +455,13 @@
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
-                <div class="card_pocra_count bg-success text-white mb-4">
+                <div class="card_pocra_count bg-light text-black mb-4">
                   <div class="card-body center">
-                    PoCRA Sub-division's
+                    <span class="fw-bolder">Project Sub-division's</span>
                     <span class="proca-count pocra-subdivision">36</span>
                   </div>
                   <div
-                    class="card-footer d-flex align-items-center justify-content-between"
+                    class="card-footer d-flex align-items-center justify-content-between card-footer-pocra-count-bg-blue"
                   >
                     <a
                       class="small text-white stretched-link"
@@ -473,13 +475,13 @@
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
-                <div class="card_pocra_count bg-danger text-white mb-4">
+                <div class="card_pocra_count bg-light text-black mb-4">
                   <div class="card-body center">
-                    PoCRA Village's
+                    <span class="fw-bolder">Project Village's</span>
                     <span class="proca-count pocra-village">5272</span>
                   </div>
                   <div
-                    class="card-footer d-flex align-items-center justify-content-between"
+                    class="card-footer d-flex align-items-center justify-content-between card-footer-pocra-count-bg-blue"
                   >
                     <a
                       class="small text-white stretched-link"
@@ -1111,7 +1113,10 @@
                 <a href="https://mahapocra.gov.in/">mahapocra.gov.in</a> 2023
               </div>
               <div>
-                <a>Last Updated on: <span id="updatedOn">28/07/2023</span></a>
+                <a
+                  >Last Updated on:
+                  <span class="fw-bolder" id="updatedOn">28/07/2023</span></a
+                >
               </div>
               <div>
                 <a href="#">Privacy Policy</a>
