--- a/html/dbt-services/dbt-farmer.html
+++ b/html/dbt-services/dbt-farmer.html
@@ -49,7 +49,6 @@
         <i class="fas fa-bars"></i>
       </button>
       <!-- Navbar Title-->
-
       <div class="row title-bar">
         <div
           class="col-lg-10 col-md-10 col-sm-9 col-xs-8 title-grid"
@@ -99,7 +98,6 @@
           </ul>
         </div>
       </div>
-
       <!-- Navbar-->
     </nav>
     <div id="layoutSidenav">
@@ -216,8 +214,6 @@
                   </nav>
                 </div>
               </div>
-
-              <!--  -->
               <!-- Soil Pages -->
               <div class="soil-pages">
                 <div class="sb-sidenav-menu-heading">Soil</div>
@@ -256,7 +252,6 @@
                   </nav>
                 </div>
               </div>
-
               <!-- Make My Map Pages -->
               <div class="make-my-map-pages">
                 <div class="sb-sidenav-menu-heading">Make My Map</div>
@@ -295,18 +290,29 @@
                   </nav>
                 </div>
               </div>
-
-              <div class="sb-sidenav-menu-heading">External Resources</div>
-              <a class="nav-link" href="../../charts.html">
-                <div class="sb-nav-link-icon">
-                  <i class="fas fa-chart-area"></i>
-                </div>
-                Charts
-              </a>
-              <a class="nav-link" href="../../tables.html">
-                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                Tables
-              </a>
+              <!-- Project Report Pages -->
+              <div class="report-pages">
+                <div class="sb-sidenav-menu-heading">Other Reports</div>
+                <a class="nav-link" href="project-reports.html">
+                  <div class="sb-nav-link-icon">
+                    <!-- <i class="fas fa-chart-area"></i> -->
+                    <i class="fa-solid fa-magnifying-glass-chart"></i>
+                  </div>
+                  Project Reports
+                </a>
+                <a class="nav-link" href="charts.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-chart-area"></i>
+                  </div>
+                  Charts
+                </a>
+                <a class="nav-link" href="tables.html">
+                  <div class="sb-nav-link-icon">
+                    <i class="fas fa-table"></i>
+                  </div>
+                  Tables
+                </a>
+              </div>
             </div>
           </div>
           <div class="sb-sidenav-footer">
