--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -23,12 +23,12 @@
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Open Layer Library -->
+    <!-- Open Layer CSS Library -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ol@v7.4.0/ol.css"
     />
-    <!-- Open Layer Extention -->
+    <!-- Open Layer Extention CSS -->
     <link rel="stylesheet" href="../../libs/dist/ol-ext.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -404,7 +404,6 @@
                 <i class="fa-regular fa-map"></i>
                 PoCRA Juridiction
               </div>
-              <div id="map-div" class="map"></div>
               <div id="pocra-dbt-nrm-map" class="dbt-nrm-map"></div>
             </div>
           </div>
