experiment with Extent function of layerswitcher

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -400,9 +400,9 @@
             </div>
             <!-- Map Div -->
             <div class="card mb-4">
-              <div class="card-header">
+              <div class="card-header" id="card-title">
                 <i class="fa-regular fa-map"></i>
-                PoCRA Juridiction
+                Project Juridiction
               </div>
               <div id="pocra-dbt-nrm-map" class="dbt-nrm-map"></div>
             </div>
